[package]
name = "predicate-macros"
version = "0.1.0"
authors = ["spxg <unsafe@outlook.es>"]
edition = "2018"
description = "Easy to implement predicate crate traits"
documentation = "https://docs.rs/predicate-macros"
homepage = "https://github.com/Spxg/predicate-macros"
repository = "https://github.com/Spxg/predicate-macros"
keywords = ["assert", "predicate", "filter", "enum", "boolean"]
categories = ["accessibility", "data-structures"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
path = "src/lib.rs"
